snapshot-tests/tests/snapshots/parser__table_9_invalid.snap
---
source: snapshot-tests/tests/parser.rs
assertion_line: 54
expression: error
---
error[duplicate-key]: the key `taste` is defined multiple times
  ┌─ table_9_invalid:6:14
  │
3 │ apple.taste.sweet = true
  │       ----- first key instance
  ·
6 │ [fruit.apple.taste]  # INVALID
  │              ^^^^^ duplicate key
